syntax = "proto2";

package proto.database;

enum TransactionIsolation {
  NONE = 0;
  READ_COMMITTED = 2;
  READ_UNCOMMITTED = 1;
  REPEATABLE_READ = 4;
  SERIALIZABLE = 8;
}

message Map{
  required string key = 1;
  optional string value = 2;
}

message OpenConnectionRequest {
  optional string jdbcUrl = 1;
  repeated Map properties = 2;
}

message OpenConnectionResponse {
  optional string connectionId = 1;
  optional string catalog = 2;
  optional string databaseProductName = 3;
  optional string databaseProductVersion = 4;
  optional int32 databaseMajorVersion = 5;
  optional int32 databaseMinorVersion = 6;
}

message CloseConnectionRequest {
  optional string connectionId = 1;
}

message ChangeCatalogRequest {
  optional string connectionId = 1;
  optional string catalogName = 2;
}

message GetTransactionIsolationRequest {
  optional string connectionId = 1;
}

message GetTransactionIsolationResponse {
  optional  TransactionIsolation isolation = 1;
}

message SetTransactionIsolationRequest {
  optional string connectionId = 1;
  optional TransactionIsolation isolation = 2;
}

message SetAutoCommitRequest {
  optional string connectionId = 1;
  optional bool useAutoCommit = 2;
}

message TransactionRequest {
  optional string connectionId = 1;
}
